# mecaviv-qml-ui

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONFIG.md  README.md  TODO.md  config-loader.js  config.json  mecaviv-qml-ui.code-workspace
SirenConsole/: CMakeLists.txt  README.md  config.js  data.qrc  main.cpp  test-broadcast-direct.js  test-pupitre-connection.js  test-send-pupitre-connected.sh
SirenConsole/QML/: Main.qml
SirenConsole/QML/components/: MidiPlayer.qml
SirenConsole/QML/components/config/: ConfigNavigationPanel.qml  PresetManager.qml  PresetSelector.qml  PupitreHeader.qml  PupitreSelector.qml  StatusIndicator.qml
SirenConsole/QML/components/overview/: AmbitusBar.qml  OverviewRow.qml  PupitreCard.qml  PupitreViewer.qml
SirenConsole/QML/controllers/: CommandManager.qml  ConfigController.qml  ConfigManager.qml  ConsoleController.qml  MidiFileManager.qml  PresetManager.qml  PupitreManager.qml  SirenRouterManager.qml  SireneManager.qml  WebSocketManager.qml
SirenConsole/QML/pages/: CompositionsPage.qml  ConfigPage.qml  LogsPage.qml  MidiPage.qml  OverviewPage.qml
SirenConsole/QML/utils/: DataModels.qml  NetworkUtils.qml  WebSocketHelper.js
SirenConsole/docs/: API.md  DEPLOYMENT.md  HTTPS_SETUP.md
SirenConsole/scripts/: build.sh  deploy.sh  run.sh  start-server.sh  test-connections.sh
SirenConsole/webfiles/: api-midi.js  api-presets.js  appSirenConsole.html  appSirenConsole.js  config.js  game-engine.js  midi-analyzer.js  midi-sequencer.js  package-lock.json  package.json  presets.json  presets.json.corrupted-2025-11-26T18-38-48-371Z  puredata-proxy.js  server.js
SirenManager/: CMakeLists.txt  COMPLETION_STATUS.txt  IMPLEMENTATION_PLAN.md  README.md  STATUS_FINAL.txt  data.qrc  main.cpp
SirenManager/QML/: Main.qml
SirenManager/QML/components/: ClockDisplay.qml  MachineSelector.qml  MidiController.qml  PlaylistSlot.qml  SirenButton.qml
SirenManager/QML/controllers/: PlaylistController.qml  SystemMaintenanceController.qml  UdpController.qml
SirenManager/QML/views/: ControleurView.qml  MaintenanceView.qml  MixerView.qml  PavillonView.qml  PianoView.qml  PlayerView.qml  PlaylistComposerView.qml  SireniumView.qml  SystemMaintenanceView.qml  VoitureView.qml
SirenManager/backend/: package-lock.json  package.json  server.js  ssh-proxy.js
SirenManager/scripts/: build.sh
SirenManager/src/: MachineManager.cpp  MachineManager.h  PlaylistManager.cpp  PlaylistManager.h  UdpController.cpp  UdpController.h
SirenManager/src/Config/: MachineType.h  SirenConfig.cpp  SirenConfig.h
SirenManager/src/Models/: PlaylistModel.cpp  PlaylistModel.h
SirenManager/webfiles/: README.md  START.md  START_SERVER.md  TEST.md  appSirenManager.html  appSirenManager.html.backup  appSirenManager.html.bak  appSirenManager.js  index.html  package-lock.json  package.json  server.js  test-server.js
SirenePupitre/: CHANGELOG_BINARY_PROTOCOL.md  CMakeLists.txt  PROTOCOLE_UDP_SIMPLE.md  README.md  STRUCTURE_BINAIRE_0x02.md  SirenePupitre.code-workspace  TEST_GAME_MODE.md  config.js  data.qrc  main.cpp  simpletestgeometry.cpp  simpletestgeometry.h  taperedboxgeometry.cpp  taperedboxgeometry.h  test-game-notes.js
SirenePupitre/QML/: Main.qml
SirenePupitre/QML/admin/: AdminPanel.qml  AdvancedSection.qml  OutputSection.qml  SirenSelectionSection.qml  VisibilitySection.qml
SirenePupitre/QML/admin/advanced/: AdvancedAbout.qml  AdvancedAnimations.qml  AdvancedColors.qml  AdvancedConfig.qml  AdvancedSizes.qml  AdvancedWebSocket.qml
SirenePupitre/QML/admin/visibility/: VisibilityControllers.qml  VisibilityMainDisplays.qml  VisibilityMusicalStaff.qml
SirenePupitre/QML/components/: ControllersPanel.qml  NoteSpeedometer3D.qml  NumberDisplay2D.qml  NumberDisplay3D.qml  SirenDisplay.qml  SirenSelector.qml  StaffZone2D.qml  StudioView.qml  Test2DButtons.qml  TopDisplays2D.qml
SirenePupitre/QML/components/ambitus/: AmbitusDisplay2D.qml  AmbitusDisplay3D.qml  AmbitusPiano2D.qml  GearShiftPositionIndicator.qml  LedgerLines2D.qml  LedgerLines3D.qml  MeasureBar2D.qml  MusicalStaff2D.qml  MusicalStaff3D.qml  NoteCursor2D.qml  NoteCursor3D.qml  NotePositionCalculator.qml  NotePositionCalculator2D.qml  NoteProgressBar2D.qml  NoteProgressBar3D.qml
SirenePupitre/QML/components/indicators/: EncoderIndicator.qml  FaderIndicator.qml  GearShiftIndicator.qml  JoystickIndicator.qml  PadIndicator.qml  PedalIndicator.qml  WheelIndicator.qml
SirenePupitre/QML/controllers/: ConfigController.qml  SirenController.qml  WebSocketController.qml
SirenePupitre/QML/game/: AnticipationLine2D.qml  BINARY_FORMAT_EXAMPLES.md  ControllerTargetBar.qml  FallingCube.qml  FallingMeasureBar2D.qml  FallingNote.qml  FallingNote2D.qml  FallingNoteCustomGeo.qml  FallingNoteCylinder.qml  GameAutonomyPanel.qml  GameFeedback.qml  GameHUD.qml  GameMode.qml  GameOptionsDialog.qml  GameSequencer.js  MelodicLine.qml  MelodicLine2D.qml  MelodicLine3D.qml  PlaybackState.qml  README.md  ScoringEngine.qml  SequencerController.qml  SongSelectorDialog.qml  TestSimpleGeo.qml
SirenePupitre/QML/game/shaders/: bend.frag  bend.vert  bend_uniform.vert  cylinder_to_cube_tapered.vert  release_gradient.frag  release_segment.frag  squash.vert  tremolo.vert  tremolo_vibrato.vert  tremolo_vibrato_release.vert  vibrato.vert
SirenePupitre/QML/pages/: Test2D.qml
SirenePupitre/QML/utils/: Clef2D.qml  Clef2DPath.qml  Clef3D.qml  ColorPicker.qml  ConfigLoader.qml  DigitLED2D.qml  DigitLED3D.qml  Knob.qml  LEDSegment.qml  LEDSegment2D.qml  LEDText2D.qml  LEDText3D.qml  Ring3D.qml
SirenePupitre/QML/utils/meshes/: BassKey.mtl  TrebleKey.mtl  (+1 more)
SirenePupitre/docs/: PUREDATA_BINARY_EXAMPLES.md  PUREDATA_GAME_MESSAGES.md
SirenePupitre/scripts/: README.md  build.sh  convert-clefs.sh  convert-mesh.sh  dev-with-logs.sh  dev.sh  restart-servers.sh  start-raspberry.sh  start-server.sh  sync-to-server.sh
SirenePupitre/webfiles/: api-midi-notes.js  api-midi.js  appSirenePupitre.html  appSirenePupitre.js  package-lock.json  package.json  server.js
pedalierSirenium/QtFiles/: CMakeLists.txt  data.qrc  main.cpp  pedalierSirenium.files
(+122 files in other folders)
