cmake_minimum_required(VERSION 3.16)
project(qmlwebsocketserver LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Quick Quick3D WebSockets)

qt_add_executable(qmlwebsocketserver
    main.cpp
    data.qrc
)

qt_add_qml_module(qmlwebsocketserver
    URI qmlwebsocketserver
    VERSION 1.0
    NO_RESOURCE_TARGET_PATH
)


target_link_libraries(qmlwebsocketserver
    PRIVATE
    Qt6::Core
    Qt6::Quick
    Qt6::Quick3D
    Qt6::WebSockets
)
